--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             EX9) Write a selector to target the "back to top" link     #### EXTRA Try doing it without targeting the footer element directly
             EX10) Write a selector to target the footer
         */
+
+      /*EX1 */
+      header a.blog-header-logo {
+        background-color: #87ceeb;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
