--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       header a.blog-header-logo {
         background-color: #87ceeb;
       }
+
+      /*EX2 */
+      nav > a {
+        background-color: #87ceeb;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
