--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       nav > a {
         background-color: #87ceeb;
       }
+
+      /*EX3 */
+      .jumbotron p a {
+        background-color: #87ceeb;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
