--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       .jumbotron p a {
         background-color: #87ceeb;
       }
+
+      /*EX4 */
+      .blog-post:first-of-type {
+        background-color: #87ceeb;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
