--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       .blog-post:first-of-type {
         background-color: #87ceeb;
       }
+
+      /*EX 5*/
+      nav a:nth-child(even) {
+        background-color: #a3c1ad;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
