--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       nav a:nth-child(even) {
         background-color: #a3c1ad;
       }
+
+      /*EX6 */
+      .blog-post:last-of-type {
+        background-color: #a3c1ad;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
