--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
       .blog-post:last-of-type {
         background-color: #a3c1ad;
       }
+
+      /*EX7 */
+      aside .mb-0 li {
+        background-color: #a3c1ad;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
