--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       aside .mb-0 li {
         background-color: #a3c1ad;
       }
+
+      /*EX8 */
+      .blog-post:nth-of-type(2) p:first-of-type a {
+        background-color: #a3c1ad;
+      }
     </style>
     <meta charset="utf-8" />
     <meta
