--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         background-color: #87ceeb;
       }
 
+      h1 {
+        background-color: #87ceeb;
+      }
+
       /*EX2 */
       nav > a {
         background-color: #87ceeb;
@@ -63,6 +67,11 @@
 
       /*EX8 */
       .blog-post:nth-of-type(2) p:first-of-type a {
+        background-color: #a3c1ad;
+      }
+
+      /*EX9 */
+      body:last-child p:last-of-type a {
         background-color: #a3c1ad;
       }
     </style>
