--- a/index.html
+++ b/index.html
@@ -494,18 +494,18 @@
 
     <script>
       /*
-        JS Exercises
-        EX11) Write a function to add a new link into the navbar
-        EX12) Write a function to remove the "Search" magnifying glass icon
-        EX13) Write a function to change the background of the jumbotron
-        EX14) Write a function to change the color of the main title
-        EX15) Write a function to change the column size for post headings
-        EX16) Write a function to remove all the links under "Elsewhere"
-        EX17) Write a function to trim just the first 50 characters in the first paragraph for each blog post
-        EX18) Write a function and attach it to the "Newer" button, to add new Blog Post (just div and title)
-        EX19) Write a function and attach it to the "Older" button, to remove the last Blog Post
-        EX20) Write an alert with the name of the author every time the user hover with the mouse over an author name
-    */
+          JS Exercises
+          EX11) Write a function to add a new link into the navbar
+          EX12) Write a function to remove the "Search" magnifying glass icon
+          EX13) Write a function to change the background of the jumbotron
+          EX14) Write a function to change the color of the main title
+          EX15) Write a function to change the column size for post headings
+          EX16) Write a function to remove all the links under "Elsewhere"
+          EX17) Write a function to trim just the first 50 characters in the first paragraph for each blog post
+          EX18) Write a function and attach it to the "Newer" button, to add new Blog Post (just div and title)
+          EX19) Write a function and attach it to the "Older" button, to remove the last Blog Post
+          EX20) Write an alert with the name of the author every time the user hover with the mouse over an author name
+      */
 
       /*EX11 */
       let h1 = document.querySelector("h1");
@@ -541,6 +541,16 @@
         maybeTitle.classList.remove("text-dark");
         maybeTitle.style.color = "#ffe5b4";
         h1.style.color = "#ffe5b4";
+      });
+
+      /*EX15 */
+      let postCards = document.querySelectorAll("div.jumbotron + div > div");
+      let firstPostCard = document.querySelector("div.jumbotron + div > div");
+      firstPostCard.addEventListener("click", function () {
+        for (let i = 0; i < postCards.length; i++) {
+          postCards[i].classList.remove("col-md-6");
+          postCards[i].classList.add("col-md-12");
+        }
       });
     </script>
   </body>
