--- a/index.html
+++ b/index.html
@@ -559,6 +559,19 @@
         let elsewhereList = document.querySelector("aside :last-child ol");
         elsewhereList.innerHTML = "";
       });
+
+      /*EX17 */
+      let firehouse = document.querySelector(".blog-main > h3");
+      let targetParas = document.querySelectorAll(
+        ".blog-post p:nth-of-type(2)"
+      );
+      firehouse.addEventListener("click", function () {
+        for (let i = 0; i < targetParas.length; i++) {
+          targetParas[i].style.color = "red";
+          let newPara = targetParas[i].innerText.substring(50);
+          targetParas[i].innerText = newPara;
+        }
+      });
     </script>
   </body>
 </html>
